--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!--SEO-->
+   <title>ReceINtinhas, o maior site de receitas e conteudo grastonomico do universo</title> 
+   <meta name="robots" content="index, follow">
+   <meta name="googlebot" content="index,follow">
+   <meta name="description" content="Entre no ReceINtinhas, e tenha acesso a receitas de todo tipo de comida, compartilhe e conheça novas sensações grastonomicas"/>
+   <meta name=”keywords” content=”Receita, gastronomia, comida, receitas, food, preparo, guloseimas, sobremesa"/>
+   <meta name=”revisit-after” content=”3 Days” />  
+   <meta name="author" content="Marcos Paulo, Ricardo Junior">
+   <meta http-equiv="content-language" content="pt-br">
+   <!--SEO fim-->
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
@@ -16,17 +26,17 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html" title="Pagina inicial do ReiceitINhas"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="receitas.html">Receitas</a></li>
-               <li><a href="sobre.html">Sobre</a></li>
-               <li><a href="contato.html">Contato</a></li>
+               <li><a href="receitas.html" class="receitas" title="Conheça os principais pratos e mais buscados no nosso site - ReceINtinhas">Receitas</a></li>
+               <li><a href="sobre.html" class="sobre" title="Saiba quem somos e o que fazemos - ReceINtinhas">Sobre</a></li>
+               <li><a href="contato.html" class="contato" title="Entre em contato o ReceINtinhas, Site de receitas e conteudo grastonomico">Contato</a></li>
             </ul>
          </div>
       </nav>
    </header>
-   <div class="introhome col-xm-12 col-sm-12 col-md-12" style="background-image: url(imagens/banner.jpg)">
+   <div class="introhome col-xm-12 col-sm-12 col-md-12" style="background-image: url(imagens/banner.jpg)" title="Banner do ReceINtinhas">
 
    </div>
 
@@ -37,9 +47,9 @@
                <h2>Torta de limão</h2>
                <p>Coloque no liquidificador o leite condensado, o creme de leite e o suco de limão, bata bem até misturar tudo muito bem. Despeje em um pote ou em taças individuais.
                   Rale a parte verde do limão (só a verde, senão amarga) [...].</p>
-                  <div class="botaoindex"><a class="page-scroll" href="#"><b>Saiba mais</b></a></div>
+                  <div class="botaoindex"><a class="page-scroll" href="#" title="Botão para ver a receita completa"><b>Saiba mais</b></a></div>
             </div>
-            <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque3.jpg)">
+            <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque3.jpg)" title="Mousse de limão">
             </div>
          </div>
       </div>
@@ -52,9 +62,9 @@
             <div class="receitasection1 col-xm-12 col-md-6">
                <h2>Cupcake Veludo Vermelho</h2>
                <p>Bata o cream cheese com a manteiga na batedeira em velocidade máxima, até formar um creme fofo. Diminua a velocidade da batedeira e incorpore o açúcar de confeiteiro aos poucos. Decore os cupcakes com o glacê e polvilhe confeitos a gosto!</p>
-               <div class="botaoindex"><a class="page-scroll" href="#"><b>Saiba mais</b></a></div>
+               <div class="botaoindex"><a class="page-scroll" href="#" title="Botão para ver a receita completa"><b>Saiba mais</b></a></div>
             </div>
-            <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque5.jpg)"></div>
+            <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque5.jpg)" title="Cupcake Veludo vermelho"></div>
          </div>
       </div>
    </section>
@@ -65,9 +75,9 @@
                <div class="receitasection1 col-xm-12 col-md-6">
                   <h2>Hamburguer Caseiro</h2>
                   <p>Em uma tigela, coloque a carne moída e acrescente a sopa de cebola, a mostarda e o sal. Misture tudo até ficar homogêneo. Faça uma bola com a carne moída e aperte com as mãos para ficar em formato de hambúrguer. Frite com um pouco de óleo.</p>
-                  <div class="botaoindex"><a class="page-scroll" href="#"><b>Saiba mais</b></a></div>
+                  <div class="botaoindex"><a class="page-scroll" href="#" title="Botão para ver a receita completa"><b>Saiba mais</b></a></div>
                </div>
-               <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque4.jpg)">
+               <div class="receitaimg col-xm-12 col-md-6" style="background-image: url(imagens/destaque4.jpg)" title="Hambúrguer caseiro">
 
                </div>
             </div>
@@ -82,7 +92,7 @@
             <div class="row">
                <div class="col-xm-12 col-sm-4 col-md-4">
                   <div class="logo">
-                     <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html" title="Pagina inicial do ReiceitINhas">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
                   </div>
                </div>
 
@@ -98,9 +108,9 @@
                <div class="sociais col-xm-12 col-sm-6 col-md-4">
                   <p>Acompanhe-nos nas redes sociais</p>
                   <ul class="redessociais">
-                     <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
-                     <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-                     <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
+                     <li><a href="#" title="Acesse o Facebook do ReiceitINhas">  <img  src="imagens/facebook.png" alt="Logo do Facebook"/></a></li>
+                     <li><a href="#" title="Acesse o Instagram do ReiceitINhas">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#" title="Acesse o Twiiter do ReiceitINhas">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                   </ul>
                </div>
             </div>
