--- a/receitas.html
+++ b/receitas.html
@@ -5,6 +5,17 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Sempre colocar os 3 metas para a responsividade funcionar-->
    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!--SEO-->
+   <title>Conheça as nossas receitas praticas e rapidas, as mais buscadas e melhores posicionadas do nosso site - ReceINtinhas</title> 
+   <meta name="robots" content="index, follow">
+   <meta name="googlebot" content="index,follow">
+   <meta name="description" content="Conheça as nossas receitas praticas e rapidas, as mais buscadas e melhores posicionadas do nosso site - ReceINtinhas"/>
+   <meta name=”keywords” content=”Receita, gastronomia, comida, receitas, food, dicas de preparo"/>
+   <meta name=”revisit-after” content=”3 Days” />  
+   <meta name="author" content="Marcos Paulo, Ricardo Junior">
+   <meta http-equiv="content-language" content="pt-br">
+   <meta http-equiv="content-language" content="pt-br">
+   <!--SEO fim-->
    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="custom.css">
@@ -16,12 +27,12 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand"href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html" title="Pagina inicial do ReiceitINhas"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-               <li><a href="receitas.html">Receitas</a></li>
-               <li><a href="sobre.html">Sobre</a></li>
-               <li><a href="contato.html">Contato</a></li>
+               <li><a href="receitas.html" class="receitas" title="Conheça os principais pratos e mais buscados no nosso site - ReceINtinhas">Receitas</a></li>
+               <li><a href="sobre.html" class="sobre" title="Saiba quem somos e o que fazemos - ReceINtinhas">Sobre</a></li>
+               <li><a href="contato.html" class="contato" title="Entre em contato o ReceINtinhas, Site de receitas e conteudo grastonomico">Contato</a></li>
             </ul>
          </div>
       </nav>
@@ -34,8 +45,8 @@
                <h1>Destaques</h1>
             </div>
             <div class="col-xs-12 col-md-6">
-               <div class="imagemFundo" style="background-image: url(imagens/destaque1.jpg)">
-                  <a href="#"><div class="textoFundo">
+               <div class="imagemFundo" style="background-image: url(imagens/destaque1.jpg)" title="Feijoada completa para 6 pessoas">
+                  <a href="#" ><div class="textoFundo">
                      <h2>Feijoada Completa para 6 pessoas</h2>
                      <p>Como resistir a uma feijoada completa, não é? Com aquele
                         arroz branco, couve, farofa… que maravilha! E especialmente
@@ -44,7 +55,7 @@
                </div>
             </div>
             <div class="col-xs-12 col-md-6">
-               <div class="imagemFundo" style="background-image: url(imagens/destaque2.jpg)">
+               <div class="imagemFundo" style="background-image: url(imagens/destaque2.jpg)" title="Lasanha de carne">
                   <a href="#"><div class="textoFundo">
                      <h2>Lasanha de Carne</h2>
                      <p>A lasanha, prato de origem italiana, consiste em camadas
@@ -54,7 +65,7 @@
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
-               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque3.jpg)">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque3.jpg)" title="Mousse de limão">
                   <a href="#"><div class="textoFundo">
                      <h3>Mousse de Limão</h3>
                      <p>Você vai adorar essa receita de mousse de limão.
@@ -64,7 +75,7 @@
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
-               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque4.jpg)">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque4.jpg)" title="Hambúrguer caseiro">
                   <a href="#"><div class="textoFundo">
                      <h3>Hamburguer Caseiro</h3>
                      <p>Se você quer aprender como fazer um hambúrguer caseiro
@@ -73,7 +84,7 @@
                </div>
             </div>
             <div class="col-xs-12 col-md-4">
-               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque5.jpg)">
+               <div class="imagemFundoMenor" style="background-image: url(imagens/destaque5.jpg)" title="Cupcake Veludo vermelho">
                   <a href="#"><div class="textoFundo">
                      <h3>Cupcake Veludo Vermelho</h3>
                      <p>É uma receita tradicional americana. É um doce delicioso e
@@ -91,7 +102,7 @@
 
 	            <div class="col-xs-12 col-sm-4 col-md-4">
 	              <div class="logo">
-	                  <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html" title="Pagina inicial do ReiceitINhas">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
 	              </div>
 	            </div>
 
@@ -107,9 +118,9 @@
 	            <div class="sociais col-xs-12 col-sm-6 col-md-4">
   	                <p>Acompanhe-nos nas redes sociais</p>
   	                <ul class="redessociais">
-	                    <li><a href="#">  <img  src="imagens/facebook.png" alt="facebook"/></a></li>
-	                    <li><a href="#">  <img  src="imagens/instagram.png" alt="instagram"/></a></li>
-	                	  <li><a href="#">  <img  src="imagens/twitter.png" alt="twitter "/></a></li>
+                     <li><a href="#" title="Acesse o Facebook do ReiceitINhas">  <img  src="imagens/facebook.png" alt="Acesse o Facebook do ReiceitINhas"/></a></li>
+                     <li><a href="#" title="Acesse o Instagram do ReiceitINhas">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#" title="Acesse o Twiiter do ReiceitINhas">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                    </ul>
 	                </div>
 	            </div>
