--- a/receitas.html
+++ b/receitas.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html"><img src="Imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="receitas.html" class="receitas">Receitas</a></li>
@@ -102,7 +102,7 @@
 
 	            <div class="col-xs-12 col-sm-4 col-md-4">
 	              <div class="logo">
-                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html">  <img src="Imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
 	              </div>
 	            </div>
 
@@ -118,9 +118,9 @@
 	            <div class="sociais col-xs-12 col-sm-6 col-md-4">
   	                <p>Acompanhe-nos nas redes sociais</p>
   	                <ul class="redessociais">
-                     <li><a href="#">  <img  src="imagens/facebook.png" alt="Acesse o Facebook do ReiceitINhas"/></a></li>
-                     <li><a href="#">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
-                     <li><a href="#">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/facebook.png" alt="Acesse o Facebook do ReiceitINhas"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                    </ul>
 	                </div>
 	            </div>
