--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="navbar navbar-default navbar-fixed-top">
          <div class="container-fluid">
             <div class="navbar-header">
-               <a class="navbar-brand" href="index.html"><img src="imagens/logo.png" alt="Logo ReceitINhas"></a>
+               <a class="navbar-brand" href="index.html"><img src="Imagens/logo.png" alt="Logo ReceitINhas"></a>
             </div>
             <ul class="nav navbar-nav navbar-right">
                <li><a href="receitas.html" class="receitas">Receitas</a></li>
@@ -35,7 +35,7 @@
          </div>
       </nav>
    </header>
-   <div class="introhome col-xm-12 col-sm-12 col-md-12" style="background-image: url(imagens/banner.jpg)">
+   <div class="introhome col-xm-12 col-sm-12 col-md-12" style="background-image: url(Imagens/banner.jpg)">
 
    </div>
 
@@ -91,7 +91,7 @@
             <div class="row">
                <div class="col-xm-12 col-sm-4 col-md-4">
                   <div class="logo">
-                    <a href="index.html">  <img src="imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
+                    <a href="index.html">  <img src="Imagens/logofooter.png" alt="Logo da ReiceitINhas" /> </a>
                   </div>
                </div>
 
@@ -107,9 +107,9 @@
                <div class="sociais col-xm-12 col-sm-6 col-md-4">
                   <p>Acompanhe-nos nas redes sociais</p>
                   <ul class="redessociais">
-                     <li><a href="#">  <img  src="imagens/facebook.png" alt="Logo do Facebook"/></a></li>
-                     <li><a href="#">  <img  src="imagens/instagram.png" alt="Logo do Instagram"/></a></li>
-                     <li><a href="#">  <img  src="imagens/twitter.png" alt="Logo do Twitter"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/facebook.png" alt="Logo do Facebook"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/instagram.png" alt="Logo do Instagram"/></a></li>
+                     <li><a href="#">  <img  src="Imagens/twitter.png" alt="Logo do Twitter"/></a></li>
                   </ul>
                </div>
             </div>
